compiler/src/test/resources/amyc/typer/passing/FunctionCalls.amy
object FunctionCalls
  fn foo(i: Int, j: Boolean): String = {
    if(j) { i < 0 || j; "Hello" } else {foo(i-1, !j)}
  }
end FunctionCalls
