compiler/src/test/resources/amyc/typer/failing/FunctionCalls1.amy
module FunctionCall
  fn foo(i: Int): Boolean = { i < 0 }
  
  foo(true)
end FunctionCall
